# FiltersAppProject

./: LICENSE  README.md
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/1f7ac3a81a005eb91e7a515f0060558e/: .filecache  debug_android_application.stamp  gen_dart_plugin_registrant.stamp  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp  outputs.json
.dart_tool/flutter_build/29c2a1c2270e0d6c57328bc9111b7a68/: .filecache  debug_android_application.stamp  flutter_assets.d  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp
FiltersApp/: README.md  pubspec.yaml
FiltersApp/android/: gradle.properties
FiltersApp/android/app/: CMakeLists.txt  build.gradle
FiltersApp/android/app/src/main/: AndroidManifest.xml
FiltersApp/android/app/src/main/cpp/: CMakeLists.txt  image_processor.cpp  image_processor.h
FiltersApp/android/app/src/main/kotlin/com/filtersApp/filters_app/: MainActivity.kt
FiltersApp/ios/Runner/: Info.plist
FiltersApp/ios/Runner.xcodeproj/: project.pbxproj
FiltersApp/lib/: main.dart
FiltersApp/lib/constants/: app_images.dart  app_strings.dart  filter_constants.dart
FiltersApp/lib/models/: filter.dart  filter_config.dart  filter_message.dart  filter_parameter.dart
FiltersApp/scripts/: build_native.sh  setup_opencv_android.sh
filters_backend/: README.md  requirements.txt  test_api.py
filters_backend/app/: main.py
(+25 files in other folders)
